--- a/V18/content/diskussion.tex
+++ b/V18/content/diskussion.tex
@@ -1,3 +1,13 @@
+
+
+Die gemessene Halbwertsbreite $\Delta E_{\sfrac{1}{2}} \approx \SI{0.52 +- 0.05}{\kilo\eV}$ weicht um etwa
+\SI{49.47}{\percent} von der theoretischen $\Delta E_{\sfrac{1}{2}, \text{theo}} = \SI{1029.16 +- 0.04}{\eV}$ ab.
+
+Dieser Fehler resultiert unter anderem aus Ablesefehlern und der Näherung des Photopeaks als Gaußverteilung.
+Die Näherung weicht für die niedrigen Wertepaare, von denen die Zehntelwertsbreite abhängt, besonders stark ab.
+Am restlichen Peak ist ihre Abweichung geringer. \\
+
+
 \section{Literaturverzeichnis}
 \label{sec:Diskussion}
 
